src/snapshots/tptp__fof__tests__fof_variable_list-5.snap
---
source: src/fof.rs
expression: parsed
---
VariableList(
    [
        Variable(
            UpperWord(
                "X",
            ),
        ),
        Variable(
            UpperWord(
                "Y",
            ),
        ),
        Variable(
            UpperWord(
                "Z",
            ),
        ),
    ],
)
